test(service): Add unit tests for EventService logic and configure Mockito
- Cover createEvent, getEventById, deleteEvent, and getRecommendedEvents with tests - Add 'mock-maker-subclass' resource to resolve JDK 21 warnings - Verify interaction with UserRepository, EventRepository, and CategoryRepository